2010-02-01  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        Bug 34346 - With JSC bindings, make processingUserGesture work with events in Isolated Worlds

        * http/tests/security/isolatedWorld/resources/userGestureEvents-second-window.html: Added.
        * http/tests/security/isolatedWorld/userGestureEvents-expected.txt: Added.
        * http/tests/security/isolatedWorld/userGestureEvents.html: Added.

2010-02-01  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Darin Adler.

        REGRESSION: editing/selection/doubleclick-beside-cr-span.html times out on Windows
        https://bugs.webkit.org/show_bug.cgi?id=34069

        Make the sleep time shorter as this test timed out on Windows bot.

        * editing/selection/doubleclick-beside-cr-span.html:

2010-02-01  Diego Gonzalez  <diego.gonzalez@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT Provide global flag ability
        https://bugs.webkit.org/show_bug.cgi?id=34418

        Add the globalFlag property to the Qt LayoutTestController to allow
        cross-domain indications.

        * platform/qt/Skipped:

2010-02-01  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Oliver Hunt.

        Check in (failing) expected results for fast/dom/Window/window-postmessage-clone-frames.
        This fails because of <rdar://problem/5230396> eventSender.beginDragWithFiles is unimplemented.

        * platform/win/fast/dom/Window/window-postmessage-clone-frames-expected.txt: Added.

2010-02-01  Eric Carlson  <eric.carlson@apple.com>

        No review, build fix.

        https://bugs.webkit.org/show_bug.cgi?id=34447
        http/tests/media/video-referer.html fails on Windows

        * platform/win/Skipped:

2010-02-01  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed trivial fix.
        Platform dependent expected file updated after r54143.
